@@ -1,3 +1,5 @@
 = 0.4.0-dev (2025 Xxx xx)
 :revnumber: 0.4.0
 :revdate: 2025-xx-xx
+
+* update: `ConfigAwareTrait::setConfig` check for property `defaultConfig` to use as the config base options.
